# HFT_Trading_System

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  build_system.sh  requirements.txt  research_20251114_123139.json  run_trading.sh
Alpha_Modeling/: 04_Alpha_Modeling  README.md  __init__.py  factor_hypothesis.py  ml_validation.py  statistical_validation.py
Data/connectors/: HFT_CONNECTORS.md  NEW_CONNECTORS_GUIDE.md  YAHOO_FINANCE_INTEGRATION.md  __init__.py  binance_connector.py  coinbase_connector.py  iexcloud_connector.py  polygon_connector.py
Data/eda/: __init__.py  data_analyzer.py
Data/qdb/: OPTIMIZATION_GUIDE.md  OPTIMIZATION_REVIEW.md  OPTIMIZATION_SUMMARY.md  OPTIMIZED_INTEGRATION.md  QUICKSTART.md  README.md  cache.py  example_usage.py  indexer.py  ingestion.py  integration_example.py  optimization_example.py  optimized_indexer.py  qdb.py  versioning.py
Environment/backtester/: simple_backtester.py
Evaluation/: 07_Evaluation  README.md  hft_benchmarks.md  hft_metrics.py  simple_backtester.py  strategy_benchmark.py
Execution/: 06_Execution  README.md
Execution/cpp_core/: setup.py
Execution/engine/: complete_trading_flow.py  integrated_trading_flow.py  pipeline.py  result_generator.py  smart_executor.py  strategy_analyzer.py  strategy_factory.py
Execution/risk_control/: risk_metrics.py
Execution/strategies/: __init__.py  strategy_adapters.py
Execution/strategy_comparison/: __init__.py
Execution/trading/: FIX_NO_TRADES.md  NO_TRADES_DIAGNOSTIC.md  __init__.py  (+5 more)
Market_Data/: API_SUPPORT.md  README.md  __init__.py  alphavantage_connector.py  base_connector.py  load_historical_data_to_qdb.py  yahoo_connector.py
Microstructure_Analysis/: 03_Microstructure_Analysis  README.md  __init__.py  microstructure_profiling.py
Monitoring/: 10_Monitoring  README.md  SLIPPAGE_PERFORMANCE_SUMMARY.md  benchmark_slippage.py  realtime_pnl.py
Optimization/: 08_Optimization  INTEGRATION_GUIDE.md  OPTIMIZATION_ENHANCEMENT.md  OPTIMIZATION_STACK.md  OPTIMIZATION_SUMMARY.md  README.md  __init__.py  cvxpy_optimizer.py  enhanced_portfolio_manager.py  hft_optimization_guide.md  hft_optimizer.py  integrated_optimization.py  jax_optimizer.py  optimization_example.py  optimization_stack.py  optimization_types.py  optimized_optimization_stack.py  optimized_portfolio_manager.py
QDB/: 02_QDB  IMPLEMENTATION_SUMMARY.md  INTEGRATION_RUN_TRADING.md  README.md  __init__.py  example_usage.py  improved_optimized_indexer.py  ingestion.py  integration_example.py  schema.py
Research/: README.md  __init__.py  complete_research_framework.py  factor_hypothesis.py  microstructure_profiling.py  ml_validation.py  statistical_validation.py
Risk_Control/: 09_Risk_Control  README.md
Strategy_Construction/: 05_Strategy_Construction  README.md  STRATEGIES_GUIDE.md  strategy_adapters.py  strategy_registry.py
cuda_accelerated/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETE.md  README.md  build_cuda.sh
cuda_accelerated/kernels/: backtest_kernel.cu  monte_carlo_kernel.cu  slippage_kernel.cu
cuda_accelerated/python/: cuda_backtest.py  cuda_monte_carlo.py  cuda_slippage.py
examples/: api_connector_examples.py  complete_flow_demo.py  smart_pipeline_demo.py
execution/: README.md  build_cpp.sh  test_build.py
realtime_trading/: QUICKSTART.md  README.md  __init__.py  demo_trading.py  trading_engine.py
scripts/: README.md  benchmark_qdb.py  compare_all_strategies.py  evaluate_strategies.py  quick_performance_test.sh  run_benchmark.sh  test_strategies.sh
strategy/: base_strategy.py  strategy_registry.py
(+69 files in other folders)
